--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/vishivish18/webhooks#readme",
   "dependencies": {
     "body-parser": "^1.17.0",
-    "express": "^4.15.0"
+    "express": "^4.15.0",
+    "shelljs": "^0.7.8"
   }
 }
